--- a/ui/user/package.json
+++ b/ui/user/package.json
@@ -31,6 +31,7 @@
 		"@codemirror/search": "^6.5.10",
 		"@codemirror/state": "^6.5.2",
 		"@codemirror/view": "^6.36.3",
+		"@faker-js/faker": "^9.7.0",
 		"@floating-ui/dom": "^1.6.13",
 		"@milkdown/crepe": "^7.6.3",
 		"@milkdown/ctx": "^7.6.3",
@@ -39,6 +40,7 @@
 		"@milkdown/prose": "^7.6.3",
 		"@milkdown/utils": "^7.6.3",
 		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.17.3",
 		"@sveltejs/vite-plugin-svelte": "^4.0.4",
@@ -69,8 +71,7 @@
 		"tailwindcss": "^4.0.14",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.25.0",
-		"vite": "^5.4.14",
-		"@sveltejs/adapter-node": "^5.2.12"
+		"vite": "^5.4.14"
 	},
 	"type": "module"
 }
