--- a/ui/user/package.json
+++ b/ui/user/package.json
@@ -45,6 +45,7 @@
 		"@sveltejs/kit": "^2.17.3",
 		"@sveltejs/vite-plugin-svelte": "^4.0.4",
 		"@tailwindcss/postcss": "^4.0.14",
+		"@tauri-apps/cli": "^2.5.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/eslint": "^9.6.1",
 		"@uiw/codemirror-theme-github": "^4.23.8",
@@ -75,6 +76,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tauri-apps/api": "^2.5.0",
 		"es-toolkit": "^1.37.2"
 	}
 }
